# telegram_subscription_tracker_bot

./: .env.example  .gitignore  README.md  pyproject.toml  telegram_subscription_tracker_bot_spec.md
app/: main.py
app/bot/: filters.py
app/bot/handlers/: export.py  payments.py  reports.py  settings.py  start.py  subscriptions.py
app/bot/keyboards/: main_menu.py  payments.py  subscriptions.py
app/bot/states/: subscription_states.py
app/config/: settings.py
app/database/: engine.py
app/database/models/: __init__.py  subscription.py
app/database/repositories/: payment_repository.py  reminder_log_repository.py  subscription_repository.py
app/logging/: setup.py
app/scheduler/: jobs.py
app/services/: backup_service.py  export_service.py  payment_service.py  reminder_service.py  report_service.py  subscription_service.py
app/utils/: dates.py  formatters.py  validators.py
tests/: conftest.py  test_payment_service.py  test_reminder_service.py  test_report_service.py  test_subscription_service.py  test_validators.py
